--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <properties>
     <java.version>1.8</java.version>
     <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
+    <shardingsphere.version>4.0.0-RC1</shardingsphere.version>
   </properties>
 
   <dependencies>
@@ -93,8 +94,41 @@
     <dependency>
       <groupId>org.apache.shardingsphere</groupId>
       <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-      <version>4.0.0-RC1</version>
+      <version>${shardingsphere.version}</version>
     </dependency>
+    <!-- 使用XA事务时，需要引入此模块 -->
+    <!--<dependency>
+      <groupId>org.apache.shardingsphere</groupId>
+      <artifactId>sharding-transaction-xa-core</artifactId>
+      <version>${shardingsphere.version}</version>
+    </dependency>-->
+
+    <!--分布式事务的时候使用-->
+    <dependency>
+      <groupId>io.shardingsphere</groupId>
+      <artifactId>sharding-transaction-spring-boot-starter</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.shardingsphere/sharding-transaction-core -->
+   <!-- <dependency>
+      <groupId>org.apache.shardingsphere</groupId>
+      <artifactId>sharding-transaction-core</artifactId>
+      <version>4.0.0-RC1</version>
+    </dependency>-->
+
+
+
+
+    <!-- 使用BASE事务时，需要引入此模块 -->
+  <!--  <dependency>
+      <groupId>org.apache.shardingsphere</groupId>
+      <artifactId>sharding-transaction-base-seata-at</artifactId>
+      <version>4.0.0</version>
+    </dependency>-->
+
+
+
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
@@ -117,6 +151,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
     <dependency>
